--- a/src/app/usermodel/usermodel.page.html
+++ b/src/app/usermodel/usermodel.page.html
@@ -2,12 +2,12 @@
   <ion-toolbar>
     <ion-title>usermodel</ion-title>
   </ion-toolbar>
-  <!-- <ion-buttons slot="end">
-    <button mat-button mat-dialog-close>close</button>
-  </ion-buttons> -->
+ 
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+
   <dx-data-grid
   class="grid"
   [dataSource]="dataSource"
@@ -15,22 +15,22 @@
   [allowSorting]="true"
   [rowAlternationEnabled]="true"
   [allowColumnResizing]="true"
-  (onRowInserting)="onRowInserting($event)"
+  (onRowInserted)="onRowInserting($event)"
   (onRowRemoving)="onRowDeleted($event)"
+
 >
 <dxi-column dataField="Tags" caption="Select User" editCellTemplate="tagBoxEditor"  >
-      <dxi-validation-rule type="required" message="Tags are required" ></dxi-validation-rule>
 </dxi-column>
 
   <div *dxTemplate="let cellInfo of 'tagBoxEditor'">
       <dx-tag-box [dataSource]="tagname" 
-                  [inputAttr]="{ 'aria-label': 'Product' }"
                   [showSelectionControls]="true"
-                  applyValueMode="useButtons"
                   [showMultiTagOnly]="false" 
                   [searchEnabled]="true"
+                  [multiline]="true"
+                  displayExpr="text"
+                  valueExpr="text"
                   (onValueChanged)="onValueChanged($event)"
-                  
                   >
       </dx-tag-box>
   </div>
