green active checkbox

--- a/src/app/usermodel/usermodel.page.html
+++ b/src/app/usermodel/usermodel.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>usermodel</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title > {{ data.groupname }}</ion-title>
   </ion-toolbar>
  
 </ion-header>
