--- a/src/app/usermanagementcomp/usermanagementcomp.component.html
+++ b/src/app/usermanagementcomp/usermanagementcomp.component.html
@@ -39,8 +39,8 @@
           [customizeColumns]="customizeColumns"
           (onCellClick)="onCellClick($event)"
           >
-          <dxo-templates >
-              <div *dxTemplate="let data of 'customCellTemplate'">
+          <dxo-templates>
+              <div *dxTemplate="let data of 'customCellTemplate'" style="text-align: center;">
                   <mat-icon (click)="openDialog(data)">list</mat-icon>
               </div>
           </dxo-templates>
@@ -49,7 +49,7 @@
           <dxi-column dataField="groupname" caption="Group Name"  [alignment]="'center'">
             <dxi-validation-rule type="required" message="GroupName is required" ></dxi-validation-rule>
           </dxi-column>        
-            <dxi-column dataField="active" caption="Active" [dataType]="'boolean'" [alignment]="'center'"></dxi-column>
+            <dxi-column dataField="active" caption="Active" [dataType]="'boolean'" [alignment]="'center'" ></dxi-column>
           <dxi-column dataField="createdby" caption="Created By" [alignment]="'center'"></dxi-column>
           <dxi-column dataField="createdTime" caption="Created Time" [width]="170" [alignment]="'center'"></dxi-column>
           <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
@@ -89,7 +89,6 @@
       </ng-container>
 
         <ng-container *ngIf="selectedSegment === 'groupaccess'"> 
-
           <dx-data-grid
               [dataSource]="groupaccess"
               class="grid"
@@ -170,12 +169,9 @@
               <dxi-column dataField="supportControl" caption="Control" dataType="boolean"></dxi-column>
             </dxi-column>
             </dx-data-grid>
-
-
         </ng-container>
 
       <ng-container *ngIf="selectedSegment === 'user'"> 
-
                   <dx-data-grid
                   [dataSource]="usertable2"
                   [showBorders]="true"
@@ -193,11 +189,11 @@
                   (onRowRemoving)="onrowdeleted($event)"
                   (onEditorPreparing)="onEditorPreparing($event)"
                   [customizeColumns]="customizegroupColumns"
-                >
+                  >
 
 
-                <dxo-templates >
-                  <div *dxTemplate="let data of 'customCellTemplategroup'">
+                <dxo-templates  style="text-align: center !important; ">
+                  <div *dxTemplate="let data of 'customCellTemplategroup'"  style="text-align: center;">
                       <mat-icon (click)="openDialogroup(data)">list</mat-icon>
                   </div>
               </dxo-templates>
@@ -240,14 +236,14 @@
             <dxo-popup
             title="User Add/Edit"
             [showTitle]="true"
-            [width]="650"
-            [height]="400"
+            [width]="450"
+            [height]="450"
             position="centre"
           >   
           </dxo-popup>
       
 
-          <dxo-form>
+          <dxo-form colCount="1">
             <dxi-item dataField="username" caption="User Name" [fixed]="true" [dataType]="'string'">
             <!-- <dxi-validation-rule type="required" message="Username is required"></dxi-validation-rule> -->
             </dxi-item>
@@ -275,11 +271,9 @@
 
         </dxo-editing>
         </dx-data-grid>
-
       </ng-container>
 
       <ng-container *ngIf="selectedSegment === 'access'">
-
         <dx-data-grid
         [dataSource]="useraccess"
         class="grid"
@@ -362,7 +356,5 @@
         <dxi-column dataField="supportControl" caption="Control" dataType="boolean"></dxi-column>
       </dxi-column>
         </dx-data-grid>
-
       </ng-container>
-
     </ion-content>
