--- a/src/global.scss
+++ b/src/global.scss
@@ -84,32 +84,29 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .grid{
   padding: 20px;
+  
 }
 
 
-// .dx-datagrid-headers .dx-datagrid-table .dx-row>td {
-//   border-bottom: 1px solid #ddd;
-//   background-color: #0f204b;
-//   color: #fff;
-// }
+.dx-button-has-text .dx-button-content{
 
-// .dx-datagrid-checkbox-size.dx-checkbox-indeterminate .dx-checkbox-icon{
-//   border: 1px solid #0f204b;
-// }
+  display: flex !important; /* Use flexbox */
+  justify-content: center !important; /* Center horizontally */
+  align-items: center !important; /* Center vertically */
 
+}
 .dx-header-row>td>.dx-datagrid-text-content:not(.dx-sort-indicator):not(.dx-header-filter-indicator) {
   font-size: 16px;
   color:#673ab7;
   font-weight: bold;
 }
 
-
-
-
 .dx-datagrid-headers .dx-datagrid-table .dx-row>td {
   font-size: 16px;
   color:#673ab7;
-  font-weight: bold;}
+  font-weight: bold;
+text-align: center !important;
+}
 
 
   .dx-popup-title.dx-toolbar {
@@ -124,3 +121,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #fff;
   }
 
+  .dx-checkbox.dx-state-readonly .dx-checkbox-icon {
+    // border-color: lightblue;
+    border:  1px solid red ;
+
+}
+
+.dx-datagrid-checkbox-size .dx-checkbox-icon {
+  border: 1px solid blue;
+ 
+}
+
+
+.dx-datagrid-checkbox-size.dx-checkbox-checked .dx-checkbox-icon {
+
+  border: 1.5px solid green;
+  background-color: green;
+  color: white;
+
+}
