--- a/src/app/main-page/main-page.page.html
+++ b/src/app/main-page/main-page.page.html
@@ -1,5 +1,5 @@
 <!-- app.component.html --><ion-header>
-  <ion-toolbar color="primary"> 
+  <ion-toolbar > 
     <button mat-icon-button  class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
