--- a/src/app/main-page/main-page.page.scss
+++ b/src/app/main-page/main-page.page.scss
@@ -16,3 +16,8 @@
     width: 250px; /* You can set the width as needed */
   }
 
+  .menu_icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+  }
