--- a/src/app/usermanagementcomp/usermanagementcomp.component.html
+++ b/src/app/usermanagementcomp/usermanagementcomp.component.html
@@ -99,7 +99,7 @@
               [rowAlternationEnabled]="true"
               [allowColumnResizing]="true"
               [rowAlternationEnabled]="true"
-              (onRowInserted)="onRowInsertedgrpaccess($event)"
+              (onRowUpdated)="onRowInsertedgrpaccess($event)"
             >
               <dxo-search-panel [visible]="true">
               </dxo-search-panel>
